Fixed print styles on Firefox
Turns out that window.print print styles on firefox were broken because
it was printing in "fit to page" mode instead of "scale 100%" (which is
what Ctrl+P was printing in). I was somehow able to trick my user agent
into thinking I was in scale 100% mode with window.print, so it showed I
was in scale 100%, but it was acutally "fit to page".

Seems pretty straight forward and I might be able to file my 4th bug
report with Mozilla if I can reproduce how I tricked my user agent.

--- a/src/app/components/reports/pages/event-summary/view/view.component.scss
+++ b/src/app/components/reports/pages/event-summary/view/view.component.scss
@@ -2,7 +2,7 @@ section {
   border-top-style: solid;
   border-top-width: thin;
   border-color: var(--baw-secondary-lightest);
-  page-break-inside: avoid;
+  page-break-inside: avoid-page;
   padding: 1.25rem 0;
 }
 
@@ -68,11 +68,13 @@ h3 {
   display: flex;
   padding: 0;
   height: 3rem;
+  max-width: 6rem;
 }
 
 .large-embedded-figure {
   @extend .embedded-figure;
   height: 25em;
+  max-width: 100%;
 }
 
 .toggle-graph-button {
